[tool.poetry]
name = "happy-hestia"
version = "0.1.0"
description = ""
authors = ["Dave Biagioni <davebiagioni@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "happy_hestia"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pandas = "^1.5.3"
plotly = "^5.13.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
